# rust_turing

./: .gitignore  README.md
day10/.cargo/: config.toml
day11_api/: Cargo.toml
day11_api/.cargo/: config.toml
day11_api/src/: main.rs
day11_todo/: Cargo.toml
day11_todo/.cargo/: config.toml
day11_todo/src/: main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/: .env.example  Cargo.toml
day13/src/: lib.rs  main.rs
day14/: .env.example
day14/migrations/: 20250512120000_create_todos.sql
day14/src/: lib.rs  main.rs  repo.rs
day1_calculator/: Cargo.toml
day1_calculator/src/: main.rs
day2/src/: main.rs
day3/: run-cargo.ps1
day3/src/: main.rs
day4/src/: main.rs  main__.rs
day5/src/: main.rs  main_.rs
day6/: Cargo.toml
day6/src/: main.rs  main_.rs
day7/: Cargo.toml
day7/src/: main.rs  main_.rs
day8/src/: main.rs  main_.rs
day9/scripts/: ci.ps1
day9/src/: analysis.rs  lib.rs  main.rs  normalize.rs
day9/tests/: day9_api.rs
day9_2/: Cargo.toml  run-cargo.ps1
day9_2/.cargo/: config.toml
day9_2/src/: analysis.rs  lib.rs  main.rs  normalize.rs  output.rs
day9_2/tests/: analysis_tests.rs
